Mobile alignment fix

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -121,7 +121,7 @@ button:focus,
 
 .quote-text {
     font-size: 1rem;
-    margin: 0;
+    margin-top: 0.125rem;
 }
 
 .icon-left {
@@ -167,23 +167,12 @@ footer {
     .navbar-brand {
         width: 50%;
     }
-    /* #nav-name {
-        margin-bottom: 0%;
-        font-size: 2rem;
-        font-weight: 500;
-    }
-    #nav-sub {
-        font-size: 1.125rem;
-        font-weight: 300;
-    } */
     .body-container {
         margin-top: 2rem;
     }
     .circle {
         opacity: 100%;
-    }
-    #quote {
-        margin: 0 .125rem;
+        margin: 0.5rem
     }
     footer {
         text-align: left;
